--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -14,49 +14,56 @@
   <link rel="stylesheet" href="/styles/tokens.css" />
 </head>
 
-<body>
+<body class="page">
   <header>
     <h1>Scenic Route</h1>
     <p>Find must see locations on the way to your desired destination</p>
   </header>
+  <article class="grid">
+    <main>
+      <section class="AboutTrip">
+        <h2>Plan your journey</h2>
+      </section>
+      <section class="itinerary">
+        <h2>About your trip</h2>
+        <ul>
+          <li><a href="flight.html">
+              <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
+              Starting locations
+            </a></li>
+          <li><a href="destination.html">
+              <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
+              Ending locations</a></li>
+          <li>
+            <a href="interest.html">
+              <img src="/icons/heart-shine.svg" alt="pin icon" class="icon-left" />
+              Interest options</a>
+          </li>
+          <li>
+            <a href="budget.html">
+              <img src="/icons/money.svg" alt="pin icon" class="icon-left" />
+              Budgets available</a>
+          </li>
+          <li>
+            <a href="rail.html">
+              <img src="/icons/star.svg" alt="pin icon" class="icon-left" />
+              Highly rated locations</a>
+          </li>
+        </ul>
+      </section>
 
-  <section class="itinerary">
-    <h2>About your trip</h2>
-    <ul>
-      <li><a href="flight.html">
-        <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
-        Starting locations
-      </a></li>
-      <li><a href="destination.html">
-        <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
-        Ending locations</a></li>
-      <li>
-        <a href="interest.html">
-          <img src="/icons/heart-shine.svg" alt="pin icon" class="icon-left" />
-          Interest options</a>
-      </li>
-      <li>
-        <a href="budget.html">
-          <img src="/icons/money.svg" alt="pin icon" class="icon-left" />
-          Budgets available</a>
-      </li>
-      <li>
-        <a href="rail.html">
-          <img src="/icons/star.svg" alt="pin icon" class="icon-left" />
-          Highly rated locations</a>
-      </li>
-    </ul>
-  </section>
+      <section class="itinerary">
+        <h2>Whos going</h2>
 
-  <section class="itinerary">
-    <h2>Whos going</h2>
+        <ul>
+          <li><a href="person.html">Julissa</a></li>
+          <li><a href="person.html">Jasmin</a></li>
+          <li><a href="person.html">Lizbeth</a></li>
+        </ul>
+      </section>
+    </main>
+  </article>
 
-    <ul>
-      <li><a href="person.html">Julissa</a></li>
-      <li><a href="person.html">Jasmin</a></li>
-      <li><a href="person.html">Lizbeth</a></li>
-    </ul>
-  </section>
 </body>
 
 </html>
