added text and a box where interest options will be added

--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="/styles/page.css" />
   <link rel="stylesheet" href="/styles/tokens.css" />
+  <link rel="stylesheet" href="styles/reset.css" />
 </head>
 
 <body class="page">
@@ -22,7 +23,12 @@
   <article class="grid">
     <main>
       <section class="AboutTrip">
-        <h2>Plan your journey</h2>
+        <div class="overlay-box">
+          <h2>Tell us about your trip!</h2>
+        </div>
+        <div class="overlay-box">
+          <p>What are you interested in?</p>
+        </div>
       </section>
       <section class="itinerary">
         <h2>About your trip</h2>
