Dark mode implemented

--- a/packages/proto/public/index.html
+++ b/packages/proto/public/index.html
@@ -17,8 +17,14 @@
 
 <body class="page">
   <header>
-    <h1>Scenic Route</h1>
+    <h1>Scenic Route...</h1>
     <p>Find must see locations on the way to your desired destination</p>
+    <div class="dark-mode-toggle">
+      <label>
+        <input type="checkbox" id="dark-mode-toggle" autocomplete="off" />
+        Dark mode
+      </label>
+    </div>
   </header>
   <article class="grid">
     <main>
@@ -69,7 +75,7 @@
       </section>
     </main>
   </article>
-
+  <script src="darkmode.js"></script>
 </body>
 
 </html>
