connected to mongo and now using database data

--- a/packages/proto/roadtripideas.html
+++ b/packages/proto/roadtripideas.html
@@ -13,14 +13,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Dangrek&display=swap" rel="stylesheet">  <link rel="stylesheet" href="/styles/page.css" />
   <link rel="stylesheet" href="/styles/page.css" />
   <link rel="stylesheet" href="/styles/tokens.css" />
-  <link rel="stylesheet" href="styles/reset.css" />
+  <link rel="stylesheet" href="/styles/reset.css" />
 </head>
 
 <body class="page">
   <scenicroute-header></scenicroute-header>
   <article class="grid">
     <main>
-        <location-card-element src="/data/popularlocations.json"></location-card-element>
+        <location-card-element src="/destinations"></location-card-element>
     </main>
     
   </article>
