working on auth for lab 12

--- a/packages/proto/roadtripideas.html
+++ b/packages/proto/roadtripideas.html
@@ -20,7 +20,7 @@
   <scenicroute-header></scenicroute-header>
   <article class="grid">
     <main>
-        <location-card-element src="/destinations"></location-card-element>
+        <location-card-element src="/api/destinations"></location-card-element>
     </main>
     
   </article>
