--- a/packages/proto/index.html
+++ b/packages/proto/index.html
@@ -15,74 +15,75 @@
 </head>
 
 <body class="page">
-    <scenicroute-header title="Scenic Route..."
-        subtitle="Find must-see locations on the way to your desired destination">
-    </scenicroute-header>
-    <article class="grid">
-        <main>
-            <section class="AboutTrip">
-                <div class="box-left">
-                    <h2>Tell us about your trip!</h2>
-                    <location-input></location-input>
+    <mu-auth provides="scenic:auth">
+            <scenicroute-header title="Scenic Route..."
+            subtitle="Find must-see locations on the way to your desired destination">
+        </scenicroute-header>
+        <article class="grid">
+            <main>
+                <section class="AboutTrip">
+                    <div class="box-left">
+                        <h2>Tell us about your trip!</h2>
+                        <location-input></location-input>
 
-                </div>
-                <div class="overlay-box">
-                    <h2>Interests and budeget</h2>
-                </div>
-                <div class="overlay-box">
-                    <p>What are you interested in?</p>
-                </div>
-            </section>
-            <section class="itinerary">
-                <h2>About your trip</h2>
-                <ul>
-                    <li><a href="flight.html">
-                            <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
-                            Starting locations
-                        </a></li>
-                    <li><a href="destination.html">
-                            <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
-                            Ending locations</a></li>
-                    <li>
-                        <a href="interest.html">
-                            <img src="/icons/heart-shine.svg" alt="pin icon" class="icon-left" />
-                            Interest options</a>
-                    </li>
-                    <li>
-                        <a href="budget.html">
-                            <img src="/icons/money.svg" alt="pin icon" class="icon-left" />
-                            Budgets available</a>
-                    </li>
-                    <li>
-                        <a href="rail.html">
-                            <img src="/icons/star.svg" alt="pin icon" class="icon-left" />
-                            Highly rated locations</a>
-                    </li>
-                </ul>
-            </section>
+                    </div>
+                    <div class="overlay-box">
+                        <h2>Interests and budeget</h2>
+                    </div>
+                </section>
+                <section class="itinerary">
+                    <h2>About your trip</h2>
+                    <ul>
+                        <li><a href="flight.html">
+                                <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
+                                Starting locations
+                            </a></li>
+                        <li><a href="destination.html">
+                                <img src="/icons/map-tag.svg" alt="pin icon" class="icon-left" />
+                                Ending locations</a></li>
+                        <li>
+                            <a href="interest.html">
+                                <img src="/icons/heart-shine.svg" alt="pin icon" class="icon-left" />
+                                Interest options</a>
+                        </li>
+                        <li>
+                            <a href="budget.html">
+                                <img src="/icons/money.svg" alt="pin icon" class="icon-left" />
+                                Budgets available</a>
+                        </li>
+                        <li>
+                            <a href="rail.html">
+                                <img src="/icons/star.svg" alt="pin icon" class="icon-left" />
+                                Highly rated locations</a>
+                        </li>
+                    </ul>
+                </section>
 
-            <section class="itinerary">
-                <h2>Whos going</h2>
+                <section class="itinerary">
+                    <h2>Whos going</h2>
 
-                <ul>
-                    <li><a href="person.html">Julissa</a></li>
-                    <li><a href="person.html">Jasmin</a></li>
-                    <li><a href="person.html">Lizbeth</a></li>
-                </ul>
-            </section>
-        </main>
-    </article>
-    <script type="module">
-        import { define } from "@calpoly/mustang";
-        import { HeaderElement } from "/src/components/header.ts";
-        // import { LocationInputElement } from "/src/components/locationinput.ts";
+                    <ul>
+                        <li><a href="person.html">Julissa</a></li>
+                        <li><a href="person.html">Jasmin</a></li>
+                        <li><a href="person.html">Lizbeth</a></li>
+                    </ul>
+                </section>
+            </main>
+        </article>
+        <script type="module">
+            import { define, Auth } from "@calpoly/mustang";
+            import { HeaderElement } from "/src/components/header.ts";
+            import { LocationInputElement } from "/src/components/locationinput.ts";
 
-        define({
-            "scenicroute-header": HeaderElement,
-            "location-input": LocationInput
-        });
-        HeaderElement.initializeOnce();
-    </script>
+            define({
+                "scenicroute-header": HeaderElement,
+                "mu-auth": Auth.Provider,
+                "location-input": LocationInputElement
+            });
+            HeaderElement.initializeOnce();
+        </script>
+    </mu-auth>
+    
 </body>
 
 </html>
