--- a/packages/proto/roadtripideas.html
+++ b/packages/proto/roadtripideas.html
@@ -17,6 +17,7 @@
 </head>
 
 <body class="page">
+  <mu-auth id="auth" src="/api/session"></mu-auth>
   <scenicroute-header></scenicroute-header>
   <article class="grid">
     <main>
